--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,43 +1,41 @@
 body {
-  background-color: slategray;
-  text-align: center;
+    text-align: center;
+    background-color: SlateGrey;
 }
-
 p {
-  color: white;
-  font-family: Shanti;
-  font-size: 1.2em;
-  margin: 20px;
+    color: white;
+    font-family: Shanti;
+    font-size: 1.2em;
+    display: inline-block;
+    margin:  20px;
 }
-
 img {
-  margin: 60px 0 30px 0;
-  width: 250px;
+    margin: 60px 0 30px 0;
+    width: 250px;
 }
-
 input {
   width: 300px;
+  margin: 20px 20px;
   height: 50px;
-  margin: 20px;
   border: none;
   border-radius: 10px;
-  font-weight: Shanti;
-  text-align: center;
+  font-family: Shanti;
   font-size: 1.3em;
+  text-align: center;
 }
 
 input:focus {
-  border: solid 5px #00ffce;
-  outline: none;
+    outline: none;
+    border: solid 5px #00FFCE;
 }
 
 #greet {
-  background-color: palevioletred;
-  color: white;
-  width: 200px;
+    background-color: PaleVioletRed;
+    border:  none;
+    width:  200px;
+    color: white;
 }
 
 #greet:hover {
-  background-color: mediumvioletred;
-  cursor: pointer;
+    background-color: MediumVioletRed;
 }
